# Router/adminRouter.js
@@ -9,4 +9,6 @@ router.post('/view-drivers',    adminAuthorization.hashToPasswordFunction,      
 router.post('/view-pendings',   adminAuthorization.hashToPasswordFunction,                  adminController.viewUserDetailsFunction)
 router.post('/driver-assign',   adminAuthorization.hashToPasswordFunction,                  adminController.assignDriverFunction)
 //router.post('/view-bookings',   adminAuthorization.hashToPasswordFunction,                  adminController.viewBookingsByAdmin)
+router.post('/delete_user',      adminAuthorization.hashToPasswordFunction,                 adminController.deleteUserFunction)
+router.post('/remove_driver',    adminAuthorization.hashToPasswordFunction,                  adminController.removeDriverFunction)
 module.exports= router
